Fix progress spinner alignment

--- a/src/frontend/packages/core/src/features/home/home/home-page-endpoint-card/home-page-endpoint-card.component.scss
+++ b/src/frontend/packages/core/src/features/home/home/home-page-endpoint-card/home-page-endpoint-card.component.scss
@@ -141,7 +141,8 @@
     }
   }
   &__fav-none {
-    margin-left: 12px;
+    opacity: 0.7;
+    text-align: center;
   }
   &__fav-title-panel {
     display: flex;
